<resources>

    <!-- Strings de títulos do app e telas do app -->
    <string name="app_name">ProjetoTCC</string>
    <string name="title_activity_grupos_equipamentos">Grupos de Equipamentos</string>
    <string name="title_activity_equipamentos">Equipamentos</string>
    <string name="title_activity_grupos_usuarios">ProjetoTCC</string>

    <!-- String para funções de eventos -->
    <string name="navigation_drawer_abrir">Abrir navigation drawer</string>
    <string name="navigation_drawer_fechar">Fechar navigation drawer</string>

    <!-- String de textos ocultos para campos editaveis -->
    <string name="hint_nome">Nome do Usuário</string>
    <string name="hint_email">E-mail do Usuário</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_nome_grupo_equipamentos">Nome do Grupo de Equipamentos:</string>
    <string name="hint_nav_header_desc">Navigation header</string>

    <!-- String para campos visiveis -->
    <string name="text_email">E-mail:</string>
    <string name="text_senha">Senha:</string>
    <string name="text_telefone">Número de telefone:</string>


    <!-- Strings para descrição de componentes -->
    <string name="desc_icon_app">Firebase logo and email</string>

    <!-- Strings para botões -->
    <string name="action_criar_conta">Criar Conta</string>
    <string name="action_entrar">Entrar</string>
    <string name="action_entrar_google">Entrar pelo Google</string>
    <string name="action_grupos_equipamentos">Grupos de Equipamentos</string>
    <string name="action_grupos_compartilhado">Grupos compartilhados</string>
    <string name="action_sair">Sair</string>
    <string name="action_conectar">Conectar</string>
    <string name="action_desconectar">Desconectar</string>
    <string name="action_executar">Executar</string>
    <string name="action_parar">Parar</string>
    <string name="action_opções">Opções</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_deletar_grupo">Deletar Grupo</string>
    <string name="action_deletar_equipamento">Deletar Equipamento</string>
    <string name="action_adicionar_usuario">Adicionar Usuário</string>
    <string name="action_remover_usuario">Remover Usuário</string>
    <string name="action_abrir_controle_remoto">Controle Remoto</string>
    <string name="action_btn25">Gelar - 25 Graus</string>
    <string name="action_btn24">Gelar - 24 Graus</string>
    <string name="action_btn23">Gelar - 23 Graus</string>
    <string name="action_btn22">Gelar - 22 Graus</string>
    <string name="action_btn21">Gelar - 21 Graus</string>
    <string name="action_btn20">Gelar - 20 Graus</string>
    <string name="action_btn19">Gelar - 19 Graus</string>
    <string name="action_btn18">Gelar - 18 Graus</string>
    <string name="action_btn17">Gelar - 17 Graus</string>

    <!-- String para feedback de status -->
    <string name="status_conectado">Conectado</string>
    <string name="status_desconctado">Desconectado</string>
    <string name="status_carregando">Carregando…</string>
    <string name="status_permissao_contato">
        "As permissões de contatos são necessárias para fornecer conclusões de email."
    </string>


    <!-- String para feedback de erros -->
    <string name="error_email_invalido">Esse endereco de e-mail é inválido.</string>
    <string name="error_senha_invalida">Essa senha é muito curta.</string>
    <string name="error_email_inexistente">Este e-mail não existe.</string>
    <string name="error_senha_incorreta">Esta senha está incorreta.</string>
    <string name="error_campo_obrigatorio">Este campo é obrigatório.</string>
    <string name="error_verification_failed">Falha na Verificação.</string>
    <string name="error_falha_entrar">Falha na Conexão.</string>
    <string name="error_falha_autenticacao">Falha na Autenticação.</string>
    <string name="error_message_email">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_message_password">The password is invalid or the user does not have a password.</string>
    <string name="action_abrir_grupo">Abrir Grupo</string>



    <!-- String para os spinners -->
    <string-array name="spinner_marca">
        <item>LG</item>
        <item>SAMSUNG</item>
        <item>SONY</item>
    </string-array>

    <string-array name="spinner_modelo">
        <item>modelo 1</item>
        <item>modelo 2</item>
        <item>modelo 3</item>
    </string-array>

    <string-array name="spinner_tipo">
        <item>Ar-Condicionado</item>
        <item>Datashow</item>
        <item>Tv</item>
    </string-array>

    <string-array name="spinner_emissor">
        <item>emissor 1</item>
        <item>emissor 2</item>
        <item>emissor 3</item>
    </string-array>

</resources>