<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnAbrirGrupo"
        android:orderInCategory="100"
        android:title="@string/action_abrir_grupo"
        app:showAsAction="never" />

    <item
        android:id="@+id/btnDeletarGrupo"
        android:orderInCategory="100"
        android:title="@string/action_deletar_grupo"
        app:showAsAction="never" />

    <item
        android:id="@+id/btnAdicionarUsuario"
        android:orderInCategory="100"
        android:title="@string/action_adicionar_usuario"
        app:showAsAction="never" />

    <item
        android:id="@+id/btnRemoverUsuario"
        android:orderInCategory="100"
        android:title="@string/action_remover_usuario"
        app:showAsAction="never" />

    <item
        android:id="@+id/btnControleRemoto"
        android:orderInCategory="100"
        android:title="@string/action_abrir_controle_remoto"
        app:showAsAction="never" />
</menu>
